# ReloadedC

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test.c  test.c.i  test.c.relexe  test.c.tu
resources/: stdio.h  stdlib.h
src/: cmake_env.hpp.in  internal_types.hpp  main.cpp  parser.ypp  preprocessor.cpp  preprocessor.hpp  symbols.cpp  symbols.hpp
src/antlr_grammar/: relcgrammar.g4
src/antlr_grammar/.antlr/: relcgrammar.interp  relcgrammar.tokens  relcgrammarLexer.interp  relcgrammarLexer.java  relcgrammarParser.java
src/bytecode_gen/: bytecode_gen.cpp  bytecode_gen.hpp  instructions_set.hpp
src/grammar/: relcgrammar.interp  relcgrammarBaseVisitor.cpp  relcgrammarBaseVisitor.h  relcgrammarLexer.cpp  relcgrammarLexer.h  relcgrammarLexer.interp  relcgrammarLexer.tokens  relcgrammarParser.cpp  relcgrammarParser.h  relcgrammarVisitor.cpp  relcgrammarVisitor.h
src/grammar_visitor/: expressions.cpp  functions.cpp  gvisitor.cpp  gvisitor.hpp  prototypes.cpp  scopes.cpp  statements.cpp  types.cpp
src/nodes/: NodesLib.hpp  char_node.cpp  char_node.hpp  exp_node.cpp  exp_node.hpp  expressions.cpp  expressions.hpp  float_node.cpp  float_node.hpp  func_call_node.cpp  func_call_node.hpp  identifier_node.cpp  identifier_node.hpp  integer_node.cpp  integer_node.hpp  math_node.cpp  math_node.hpp  node.cpp  node.hpp  primitive_types.cpp  primitive_types.hpp  program.cpp  program.hpp  program_node.cpp  program_node.hpp  statement_node.cpp  statement_node.hpp  visitor.cpp  visitor.hpp
src/relcvm/: main.cpp
src/relcvm/engine/: context.cpp  context.hpp  engine.cpp  engine.hpp  voperations.hpp
src/relcvm/instructions/: arithmetic.cpp  binary.cpp  conditional.cpp  control_flow.cpp  conversions.cpp  memory.cpp
src/vlibc/: internal_vlibc.hpp  stdio.cpp  stdlib.cpp  vlibc.cpp  vlibc.hpp
